crates/oopsie/tests/snapshots/daisy_erased__erased_error_json_stable.snap
---
source: crates/oopsie/tests/daisy_erased.rs
expression: error
---
{
  "message": "Inner error happened",
  "source_chain": [
    "Error: Inner function failed (foo=true, name=Alice)"
  ],
  "diagnostics": {},
  "spantrace": null,
  "backtrace": null
}
