crates/oopsie/tests/snapshots/daisy_erased__erased_error_json_unstable.snap
---
source: crates/oopsie/tests/daisy_erased.rs
expression: error
---
{
  "message": "Inner error happened",
  "source_chain": [
    "Error: Inner function failed (foo=true, name=Alice)"
  ],
  "diagnostics": {
    "code": "daisy_erased::common::MyError::Inner"
  },
  "spantrace": {
    "spans": [
      {
        "metadata": {
          "name": "inner_function",
          "target": "sys",
          "level": "INFO",
          "module_path": "daisy_erased::common",
          "file": "crates/oopsie/tests/common/mod.rs",
          "line": 33
        },
        "fields": "{\"foo\":true,\"id\":42,\"name\":\"Alice\"}"
      },
      {
        "metadata": {
          "name": "outer_function",
          "target": "controller",
          "level": "INFO",
          "module_path": "daisy_erased::common",
          "file": "crates/oopsie/tests/common/mod.rs",
          "line": 41
        },
        "fields": "{\"foo\":true,\"name\":\"Alice\"}"
      }
    ]
  },
  "backtrace": {
    "frames": "[..]"
  }
}
