crates/oopsie/tests/snapshots/daisy_erased__format_short_with_help_stable.snap
---
source: crates/oopsie/tests/daisy_erased.rs
expression: short
---
daisy_erased::ErrorWithHelp

  × Something went wrong: connection refused
  help: Try restarting the service
